fixed scroll issue on safari

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -396,7 +396,7 @@ header {
 
 
 .intro {
-  position: absolute;
+  position: relative;
   background: $navy;
   color: white;
   height: 100vh;
